Edited wiki page CodePlugIn_INotifyPropertyChanged_Property through web user interface.

--- a/wiki/CodePlugIn_INotifyPropertyChanged_Property.wiki
+++ b/wiki/CodePlugIn_INotifyPropertyChanged_Property.wiki
@@ -51,7 +51,20 @@ public class Customer : INotifyPropertyChanged
 
 Note the expansion of the property with a backing store, the call to PropertyChanged event from the set block, the addition of the INotifyPropertyChanged interface to the class, and the declaration of the PropertyChanged to satisfy the interface. The code uses an anonymous method to initialize the event so that there is always an empty subscriber in the list, removing the need for null checking before firing the event.
 
-If you instead choose "Convert to INPC Property Base Class Call", the resulting code will look like this:
+If you instead you first add a base class that implements INPC and has an OnPropertyChanged virtual method, such as the Prism NotificationObject class:
+
+{{{
+public class Customer : NotificationObject
+{
+    public int CustomerId { get; set; }
+}
+}}}
+
+Then you invoke refactoring on the property and select "Convert to INPC Property Base Class Call", the result will be:
+
+{{{
+}}}
+ choose "Convert to INPC Property Base Class Call", the resulting code will look like this:
 
 
 === Credits ===
