Added links to CR_StringFormatter and CR_PrimitiveTab to sidebar

--- a/wiki/DefaultSidebar.wiki
+++ b/wiki/DefaultSidebar.wiki
@@ -34,6 +34,8 @@
     * [CR_ClearAllMarkers]
     * [CR_MarkerCloseOnCollect]
     * [DX_TabNav]
+    * [CR_StringFormatter]
+    * [CR_PrimitiveTab]
   * Decorative Plugins
     * [CR_MethodPreview]
     * [CR_MetricShader]
