--- a/wiki/CR_EnforceNamingConventions.wiki
+++ b/wiki/CR_EnforceNamingConventions.wiki
@@ -1,7 +1,7 @@
 #summary Provides action to alter naming convention of members.
 [http://www.rorybecker.co.uk/DevExpress/Plugins/Community/CR_EnforceNamingConventions/ http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Download.png]      [http://code.google.com/p/dxcorecommunityplugins/wiki/InstallInstructions  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/InstallHelp.png]
 [http://code.google.com/p/dxcorecommunityplugins/wiki/Feedback  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Feedback.png]
-===== Built using CodeRush 11.1 =====
+===== Built using !CodeRush 11.1 =====
 === Introduction ===
 This plugin is an example of how to apply a naming convention across your solution.
 
@@ -16,6 +16,18 @@ Simply pick the 'Enforce Naming Convention' option from the DevExpress menu.
 http://dxcorecommunityplugins.googlecode.com/svn/trunk/CR_EnforceNamingConventions/Screenshots/EnforceNamingConventions.png
 
 The plugin will then iterate through your solution, adjusting the name of every member of every type in accordance with the stated naming convention.
+
+All references to these members will of course be altered as well.
+
+Once all renames are complete, summary details of operations performed are displayed in the status bar.
+
+http://dxcorecommunityplugins.googlecode.com/svn/trunk/CR_EnforceNamingConventions/Screenshots/RenamedMembers.png
+
+Alternatively, if no alterations were required, then this is also noted.
+
+http://dxcorecommunityplugins.googlecode.com/svn/trunk/CR_EnforceNamingConventions/Screenshots/AllMembersCorrectlyNamed.png
+
+
 === Credits ===
 
 Author: [http://devexpress.com/mark Mark Miller] 
