Edited wiki page CR_ImportNamespace through web user interface.

--- a/wiki/CR_ImportNamespace.wiki
+++ b/wiki/CR_ImportNamespace.wiki
@@ -52,4 +52,4 @@ http://dxcorecommunityplugins.googlecode.com/svn/trunk/CR_ImportNamespace/Screen
 
 === Credits ===
 
-Author: [Team CodeRush] 
+Author: Team !CodeRush
