--- a/wiki/CR_ToDoTabber.wiki
+++ b/wiki/CR_ToDoTabber.wiki
@@ -1,16 +1,14 @@
 [http://www.rorybecker.co.uk/DevExpress/Community/Plugins/CR_ToDoTabber/ http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Download.png]      [http://code.google.com/p/dxcorecommunityplugins/wiki/InstallInstructions  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/InstallHelp.png]
 [http://code.google.com/p/dxcorecommunityplugins/wiki/Feedback  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Feedback.png]
-===== built using CodeRush 11.2.7 =====
+===== built using !CodeRush 11.2.7 =====
 === Introduction ===
 This plugin extends the Tab-to-Next-Reference feature of CodeRush so that one may Tab through all comments which match a given pattern.
 
-The starting Pattern may be one of:
+The starting pattern may be one of:
 
-// TODO: 
-
-// BUG:
-
-// FIXME: 
+  * // TODO: 
+  * // BUG:
+  * // FIXME: 
 
 In fact, CR_ToDoTabber requires only that your comment contain a : character.
 
