Edited wiki page CR_ToDoTabber through web user interface.

--- a/wiki/CR_ToDoTabber.wiki
+++ b/wiki/CR_ToDoTabber.wiki
@@ -10,7 +10,7 @@ The starting pattern may be one of:
   * // BUG:
   * // FIXME: 
 
-In fact, CR_ToDoTabber requires only that your comment contain a : character.
+In fact, !CR_ToDoTabber requires only that your comment contain a : character.
 
 This being the case it will scan all characters up to that point, and then find all other comments in your solution which start in the same way and mark these for navigation, allowing you to tab through them to your hearts content.
 
