--- a/wiki/CR_UnitTestsRunClassTests.wiki
+++ b/wiki/CR_UnitTestsRunClassTests.wiki
@@ -10,9 +10,9 @@ These actions are *!UnitTestsRunClassTests* and *!UnitTestsDebugClassTests*.
 
 These function similarly to the other UnitTestsXXXXX actions, in that a given set of tests are either run or debugged depending on the action invoked.
 
-For the purpose of this plugin, !ClassTests refers to the set of Tests that are found within a class named after the original source class with a suffix of "_Tests"
+This plugin will look for a class named similarly to the active class but with a suffix of {{{"_Tests"}}}. It will then run or debug all tests within that class.
 
-Therefore, when invoked from within a class '!MyClass', the plugin will look for a class called '!MyClass_Tests' and execute any tests within that class.
+So for example... when invoked from within a class '!MyClass', the plugin will look for a class called '!MyClass_Tests' and execute any tests within that.
 
 The plugin will look for this class in several locations.
 {{{
