Edited wiki page DefaultSidebar through web user interface.

--- a/wiki/DefaultSidebar.wiki
+++ b/wiki/DefaultSidebar.wiki
@@ -52,6 +52,7 @@
     * [Impromptu]
   * XPO Plugins
     * [XPO_EasyFields]
+    * [CR_CreatePersistentClassList]
   * Misc Plugins
     * [DX_GuidGen]
     * [CR_SmartQuotes]
