Edited wiki page DefaultSidebar through web user interface.

--- a/wiki/DefaultSidebar.wiki
+++ b/wiki/DefaultSidebar.wiki
@@ -36,6 +36,7 @@
     * [DX_TabNav]
     * [CR_StringFormatter]
     * [CR_PrimitiveTab]
+    * [CR_EasyGoto]
   * Decorative Plugins
     * [CR_MethodPreview]
     * [CR_MetricShader]
