--- a/wiki/DX_PluginUpdater.wiki
+++ b/wiki/DX_PluginUpdater.wiki
@@ -1,65 +1,65 @@
 [http://www.rorybecker.co.uk/DevExpress/Community/Plugins/DX_PluginUpdater/ http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Download.png]      [http://code.google.com/p/dxcorecommunityplugins/wiki/InstallInstructions  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/InstallHelp.png]
 [http://code.google.com/p/dxcorecommunityplugins/wiki/Feedback  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Feedback.png]
-===== Requires DXCore 11.1.8 or better =====
+===== Built against DXCore 11.2.11 =====
 === Introduction ===
+Plugin to find...
+ * Updates to already installed plugins.
+ * New plugins that you don't already have installed.
+... and offer to download and install them for you.
 
-*Before we start, make sure you're running version 11.1.8 of CodeRush or better.*
+Please read *Notes* and *Requirements* sections (below) before installing this plugin.
 
-This plugin is not like others.
+=== Detailed version ===
 
-It's Beta. Very Beta. In fact it's Alpha. If Alpha or Beta scare you, then this plugin is not for you (Yet!) :P
+This plugin has 2 functions (*Update Plugins* and *Find New Plugins*) which are presented on the DevExpress menu.
 
-*What does it do?*
+**Update Plugins** will scan the community site for any updates to plugins you already have installed. 
 
- * You tell it what community plugins you're interested in.
- * It works out which of those have updates.
- * It downloads the zips.
- * It unzips the plugins.
- * ... and it installs the plugins in the right place.
+**Find New Plugins** will scan the community site for plugins you do not already have installed.
 
-*Why is it Beta?*
-
-Well it has some limitations...
-
- * By "install" I mean "dumps the content of the zip file in your 'community plugins' folder".
- * It can't restart the DXCore for you after installing the plugins. (Yet!)
- * It can't get plugins from any site other than the community site (Yet!)
- * It can't tell you anything about the plugin you're downloading other than the name(Yet!)
-  * I'm planning to provide links to source, wiki and binaries (Although you won't need them :) )
-
-=== Configuration ===
-
- * Requirements 
-   * You must have CodeRush 11.1.8 or better (Yes I do keep saying that)
-   * You must turn on "Use Raw Assembly Load"
-      * DevExpress\Options ... Core \ Startup ... Last option.
-   * You must have no fear. Am I making myself clear on this? :D
+When invoked, each menu item will present you with a list of it's plugins, and allow you to choose which to download and update\install.
 
 === Usage ===
 
-Everything (For now) is done from the options page.
+*Scenario 1*
 
-*Visit options page*
+You have several plugins installed and you are happy with this, but wonder if you have the latest versions of all of these.
 
- * Visit DevExpress\Options ... Community\Plugins\PluginUpdater 
-  * (Yes I know the location is crap, but I'm doing this in my spare spare time (and there's very little of that))
- * Tick the plugins you're interested in.
- * Hit "Check for Updates Now"
+ * Choose *DevExpress \ Update Plugins*. Plugin Updater will present you with a list of installed plugins.
+ * Select those you'd like to update and click Ok.
 
-*Choose Interesting Plugins*
- * Tabs
-   * Plugins Tab - This is the list of plugins you can currently choose to keep up to date with.
-     * *Note: The list of plugins will only recalculate when the refresh button is pressed.* 
-   * Feeds Tab - The feeds listed here contribute to the list of plugins listed on the plugins tab.
-   * Custom Tab - Community plugin names listed here (newline separated) will be added to the checklistbox on the plugins page
-   * Keywords Tab - This is currently non functional.
- * Checkboxes and Radio buttons**
-   * All, New, Local: Determines if the updates shown on the plugin tab, include plugins you already have locally, plugins you don't yet have or both. 
- * 'Show All Community Site plugins': Does exactly what it says on the tin. Adds all community plugins to plugins Tab regardless of other options.
-   * Note: Adds plugins to list, but does *NOT* tick them.
+*Scenario 2*
 
-*Check for Updates to Plugin*
-  * Press 'Check for updates Now'
+You are curious what other plugins might exist beyond those you already have in place. 
+
+ * Choose *DevExpress \ Find New Pugins*. Plugin Updater will present you with a list of plugins which you do not have installed on this machine.
+ * Select those you'd like to install and click Ok.
+
+=== Notes ===
+
+Plugin Updater will:
+
+ * ...provide a list of plugins to download\update.
+ * ...download the latest version of any selected plugin.
+ * ...unzip the downloaded zip file into your currently configured Community plugins folder.
+
+Plugin Updater does not:
+
+ * ...know the specific requirements of any given plugin. 
+ * ...know if the plugin will run with a given version of VS, CodeRush
+ * ...install any settings or key bindings.
+ * ...restart the DXCore (necessary to load plugin updates)
+   * (You can do this via *DevExpress\Reload*)
+ * ...locate plugins not hosted on the community site (Yet!)
+
+ _Plugin Updater requires that you check the *Use raw assembly load* setting_. This setting is found on the *Core\Startup*
+
+=== Requirements ===
+
+ * Requirements 
+   * You should have CodeRush 11.2.11 or better. 
+   * You must turn on "Use Raw Assembly Load"
+      * DevExpress\Options ... Core \ Startup ... Last option.
 
 === Credits ===
 
