--- a/wiki/DX_PluginUpdater.wiki
+++ b/wiki/DX_PluginUpdater.wiki
@@ -54,7 +54,7 @@ Plugin Updater does not:
 
  _Plugin Updater requires that you check the *Use raw assembly load* setting_. This setting is found on the *Core\Startup*
 
- Plugin Updater currently operates with a subset of the plugins available from the community site. Please [http://devexpress.com/rory let me know] if you think a community plugin is stable \ important enough to be added to this list.
+ Plugin Updater currently operates with a subset of the plugins available from the community site. Please [RoryBecker let me know] if you think a community plugin is stable \ important enough to be added to this list.
 
 === Requirements ===
 
